--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -93,11 +93,13 @@
 }
 
 .menu-icon {
-  font-size: 20px;
   width: 24px;
+  height: 24px;
+  min-width: 24px;
   display: flex;
   align-items: center;
   justify-content: center;
+  color: inherit;
 }
 
 .menu-label {
