--- a/src/styles/icons.css
+++ b/src/styles/icons.css
@@ -497,6 +497,40 @@
   bottom: 28%;
 }
 
+/* Logout/Exit Icon */
+.icon-logout {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.icon-logout::before {
+  content: '';
+  position: absolute;
+  width: 50%;
+  height: 65%;
+  border: 2px solid currentColor;
+  border-right: none;
+  border-radius: 6px 0 0 6px;
+  left: 0;
+}
+
+.icon-logout::after {
+  content: '';
+  position: absolute;
+  width: 40%;
+  height: 2px;
+  background: currentColor;
+  right: 0;
+  box-shadow: 
+    3px -3px 0 0 currentColor,
+    3px 3px 0 0 currentColor;
+  clip-path: polygon(0 0, 100% 50%, 0 100%);
+}
+
 /* ========== RESPONSIVE SIZING ========== */
 @media (max-width: 968px) {
   .icon-quiz::before,
